ps-cfk-infra/bases/00_external/oracle19c/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle19
  template:
    metadata:
      labels:
        app: oracle19
        selector: oracle19
    spec:
      securityContext:
        fsGroup: 54321
      tolerations:
        - key: app
          operator: Equal
          value: oracle
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - oracle
      containers:
        - name: oracle19
          image: dedovicnermin/oracle19cdb:1.0
          resources:
            limits:
              cpu: "3.0"
              memory: "12Gi"
            requests:
              cpu: "1.0"
              memory: "8Gi"

          ports:
            - name: main-port
              containerPort: 1521
            - name: em-port
              containerPort: 5500
          volumeMounts:
            - name: dshm
              mountPath: "/dev/shm"
            - name: ora-data
              mountPath: /opt/oracle/oradata
            - name: ora-setup
              mountPath: "/opt/oracle/scripts/setup"
            - name: ora-startup
              mountPath: "/opt/oracle/scripts/startup"




      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: ora-data
          persistentVolumeClaim:
            claimName: ora-data
        - name: ora-startup
          persistentVolumeClaim:
            claimName: ora-startup
        - name: ora-setup
          persistentVolumeClaim:
            claimName: ora-setup


        - name: oracle-setup-scripts
          secret:
            secretName: oracle-setup-scripts
        - name: oracle-startup-scripts
          secret:
            secretName: oracle-startup-scripts
