ps-cfk-infra/bases/00_external/oracle19c/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oracle-svc
  labels:
    app: oracle19
spec:
  selector:
    app: oracle19
  type: NodePort
  ports:
    - port: 1521
      protocol: TCP
